--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -13,17 +13,19 @@
   </head>
   <body>
     <header>
-      <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-      <nav>
-        <ul>
-          <li><a href="index.html#portfolio">projets</a></li>
-          <li><a href="index.html#contact">contact</a></li>
-          <li><a href="login.html">login</a></li>
-          <li>
-            <a href="https://www.instagram.com"><img src="./assets/icons/instagram.png" alt="Instagram" /></a>
-          </li>
-        </ul>
-      </nav>
+      <div class="div-header">
+        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+        <nav>
+          <ul>
+            <li><a href="index.html#portfolio">projets</a></li>
+            <li><a href="index.html#contact">contact</a></li>
+            <li><a href="login.html">login</a></li>
+            <li>
+              <a href="https://www.instagram.com"><img src="./assets/icons/instagram.png" alt="Instagram" /></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <section id="log-in">
