Modifications post-soutenance

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -86,7 +86,9 @@
                     <option value="2">Appartements</option>
                     <option value="3">Hotels & Restaurants</option>
                   </select>
+                  <div id="empty-field"></div>
                 </div>
+
                 <div class="overline">
                   <button type="submit" id="valider">Valider</button>
                 </div>
